syntax = "proto3";

option java_package = "studio.rossxrio.grpc";

service User {
  rpc StreamData(Data) returns(APIResponse);
  rpc Login(LoginRequest) returns (APIResponse);
  rpc Logout(LogoutRequest) returns (APIResponse);
}

message Data {
  string alias = 1;
  string data = 2;
}

message LoginRequest {
  string userName = 1;
  string password = 2;
}

message LogoutRequest {
  string userName = 1;
}

message APIResponse {
  string responseMessage = 1;
  int32 responseCode = 2;
}

message Empty {}